--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,32 @@
+body {
+    margin: 0;
+    
+}
+
 header {
 
     display: flex;
     justify-content: space-between;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
+    padding: 10px;
 
+}
+
+.logo {
+
+    display: flex;
+
+}
+
+.btn-menu {
+
+    display: flex;
+    align-items: center;
+
+}
+
+.logo p {
+
+    font-size: 9px;
+    margin-left: 9px;
 }
